[package]
name = "maths-rs"
version = "0.1.11"
edition = "2021"
authors = ["polymonster <alexandercdixon@gmail.com>"]
description = "A linear algebra library for gamedev and graphics"
readme = "readme.md"
homepage = "https://github.com/polymonster/maths-rs"
repository = "https://github.com/polymonster/maths-rs"
keywords = ["linear-algebra", "math", "vector", "matrix", "quaternion"]
categories = ["mathematics", "game-development", "graphics"]
license-file = "license.md"

[features]
short_hand_constructors = []
lhs_scalar_vec_ops = []
casts = []
short_types = []
default = ["short_hand_constructors", "lhs_scalar_vec_ops", "casts", "short_types"]
