[package]
name = "maths-rs"
version = "0.2.6"
edition = "2021"
authors = ["polymonster <alexandercdixon@gmail.com>"]
description = "A linear algebra library for gamedev and graphics"
readme = "readme.md"
homepage = "https://github.com/polymonster/maths-rs"
repository = "https://github.com/polymonster/maths-rs"
keywords = ["linear-algebra", "math", "vector", "matrix", "quaternion"]
categories = ["mathematics", "game-development", "graphics"]
license-file = "license.md"

[features]
short_hand_constructors = []
lhs_scalar_vec_ops = []
casts = []
short_types = []
serde = ["dep:serde", "serde_json"]
hash = []
default = ["short_hand_constructors", "lhs_scalar_vec_ops", "casts", "short_types"]

[dependencies]
serde = {version = "1.0", features = ["derive"], optional=true}
serde_json = {version = "1.0.81", optional=true}