[package]
name = "maths-rs"
version = "0.2.7"
edition = "2021"
authors = ["polymonster <alexandercdixon@gmail.com>"]
description = "A linear algebra library for gamedev and graphics"
readme = "readme.md"
homepage = "https://github.com/polymonster/maths-rs"
repository = "https://github.com/polymonster/maths-rs"
keywords = ["linear-algebra", "math", "vector", "matrix", "quaternion"]
categories = ["mathematics", "game-development", "graphics"]
license = "MIT"

[features]
short_hand_constructors = []
lhs_scalar_vec_ops = []
casts = []
short_types = []
serde = ["dep:serde"]
hash = []
default = ["short_hand_constructors", "lhs_scalar_vec_ops", "casts", "short_types"]

[dependencies]
serde = {version = "1.0", features = ["derive"], optional=true}